--- a/_includes/pageview-providers/custom/post.html
+++ b/_includes/pageview-providers/custom/post.html
@@ -1,3 +1,6 @@
 <!-- start custom pageview snippet (for the post) -->
-
+{%- if jekyll.environment != 'development' -%}
+  {%- if site.comments.provider == 'disqus' -%}
+    {%- include comments-providers/disqus.html -%}
+  {%- elsif site.comments.provider == 'gitalk' -%}
 <!-- end custom pageview snippet (for the post) -->
